@@ -80,7 +80,7 @@ foundation-list@gnome.org or to us at elections@gnome.org.</P>
 <P><B>CANDIDATES FOR THE GNOME FOUNDATION BOARD OF DIRECTORS</B> 
 </P>
 
-<P>1. MARTIN SAVIOR<br />
+<P>1. MARTIN SEVIOR<br />
 &quot;
 Now that the push for corporate desktop is on in earnest I believe I can
 help the GNOME community of volunteer hackers feel empowered by
@@ -171,7 +171,7 @@ Affiliation: Sun Microsystems.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html</a>
 </P>
 
-<P>6. BASTIEN NOCERA<br />
+<P>7. BASTIEN NOCERA<br />
 &quot;
 I've been a GNOME developer for more than 2 years now, starting as an
 independant application developer, and finding myself more and more
@@ -183,6 +183,64 @@ the people voting for me.
 &quot;<br />
 Affiliation: Red Hat.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00003.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00003.html</a>
+</P>
+
+<P>8. MALCOLM TREDINNICK<br />
+&quot;
+Have done a reasonable amount of API documentation, along with writing a few
+standalone documents aimed at helping developers use GNOME more easily. I am
+interested in seeing GNOME be pitched as viable desktop platform to developers
+and would like to see more events such as Sun's developer courses and the
+tutorials planned for next year's GUADEC. Experience serving on committees
+both at state and national level.
+&quot;<br />
+Affiliation: None.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00004.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00004.html</a>
+</P>
+
+<P>9. MICHAEL MEEKS<br />
+&quot;
+- Pushing for closer integration with other parts of the desktop;
+OpenOffice particularly.
+<br />
+- Ensuring that Gnome stays a Meritocracy
+<br />
+- Keeping our vision wider than a file manager and control panel, and
+on a complete Free software desktop.
+<br />
+- Ensuring the hackers make the coding / code inclusion decisions, the
+artists make the art / art inclusion decisions, the UI team decide
+the UI, the i18n team in charge of i18n, and the release team
+co-ordinating releases.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00005.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00005.html</a>
+</P>
+
+<P>10. DANIEL VEILLARD<br />
+&quot;
+I am French, long time Gnomer and Linux addict, maintainer of
+libxml, libxslt and rpmfind. I served on the Gnome Board for two
+years and I am used to non-profit organizations and the negociations
+needed to reach consensus in a group. I will focuse on the reuse
+of standards, internationalization and keeping trust relationship at an
+individual level. I think those are needed to keep hacking on Gnome fun
+and getting acceptance in new communities. Growing the foundation to
+get acceptance by program developpers is the next challenge of the Board.
+&quot;<br />
+Affiliation: Red Hat.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00006.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00006.html</a>
+</P>
+
+<P>11. JAMES HENSTRIDGE<br />
+&quot;
+I am an Australian GNOME hacker.  I have been working on the project 
+since 1998, focussing on language bindings (I am maintainer of the 
+Python bindings) and the platofrm libraries (I maintain libglade).  I am 
+currently serving on the 2002 board.
+&quot;<br />
+Affiliation: None.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00007.html</a>
 </P>
 
 <center>
