@@ -1,3 +1,7 @@
+2002-11-04  Vincent Untz  <vincent@vuntz.net>
+
+	* ballot-summary.html: we have 11 candidates now. Fixed two typos.
+
 2002-11-03  Vincent Untz  <vincent@vuntz.net>
 
 	* ballot-summary.html: another candidate.
